changes Go! button for searching to search icon

--- a/MoinMoin/themes/basic/templates/layout.html
+++ b/MoinMoin/themes/basic/templates/layout.html
@@ -99,7 +99,9 @@
                             <div class="input-group">
                                 <input name='q' type="text" class="form-control" placeholder="Search ...">
                                 <div class="input-group-btn">
-                                    <button class="btn btn-primary" type="submit">Go!</button>
+                                    <button class="btn btn-primary" type="submit">
+                                        <i class="icon-search"></i>
+                                    </button>
                                 </div>
                             </div>
                         </form>
