--- a/MoinMoin/themes/basic/static/custom-less/basic.less
+++ b/MoinMoin/themes/basic/static/custom-less/basic.less
@@ -1,4 +1,7 @@
 @import "bootstrap.less";
+.moin-sitename {
+  padding-left: 0px;
+}
 
 .moin-logo {
   .text-center;
@@ -100,6 +103,7 @@
   .navbar-inverse;
   background-color: @moin-navbar-inverse-bgcolor;
   padding-left: 0px;
+  padding-right: 0px;
   .navbar-nav {
     > li > a {
       color: @moin-navbar-inverse-textcolor;
