--- a/MoinMoin/themes/basic/templates/index.html
+++ b/MoinMoin/themes/basic/templates/index.html
@@ -1,5 +1,10 @@
 {% extends theme("layout.html") %}
 {% import "forms.html" as forms with context %}
+{% import theme("itemviews.html") as itemviews with context %}
+
+{% block views %}
+    {{ itemviews }}
+{% endblock %}
 
 {% if item_name %}
     {% set title = _("Index of subitems of '%(item_name)s'", item_name=item_name) %}
