Fixes the top navbar, links now work and tested with FF too

--- a/MoinMoin/themes/basic/static/css/basic.css
+++ b/MoinMoin/themes/basic/static/css/basic.css
@@ -4208,6 +4208,11 @@ td.visible-print {
     display: none !important;
   }
 }
+@media screen and (min-width: 992px) {
+  .moin-pull-right {
+    float: right;
+  }
+}
 h1:hover .moin-permalink,
 h2:hover .moin-permalink,
 h3:hover .moin-permalink,
