--- a/MoinMoin/themes/basic/templates/layout.html
+++ b/MoinMoin/themes/basic/templates/layout.html
@@ -6,12 +6,9 @@
 {% set credits = snippets.credits() %}
 {% set user_actions, item_navigation, item_actions = theme_supp.get_local_panel(item_name) %}
 
-{% if item_name in ['@NONAMEGIVEN',''] %}
-{% set current_url = url_for(request.endpoint) %}
-{% else %}
-{% set current_url = url_for_item(endpoint = request.endpoint, item_name = item_name) %}
+{% set current_url = request.url %}
+{% set current_path = request.path %}
 {% set current_url_showview = url_for_item(endpoint='frontend.show_item', item_name=item_name) %}
-{% endif %}
 
 {# Helper macro to generate the local panel #}
 {% macro local_panel_main(panelname) -%}
@@ -214,7 +211,7 @@
                             <div class="list-group-item moin-list-heading"> {{ _("Site Navigation") }} </div>
                             {% for cls, url, text, title in navibar_items if cls != 'userlink' %}
                                 <a class="list-group-item {{ cls }}
-                                    {% if url in [current_url, current_url_showview] %} active{% endif %}" href="{{ url }}" 
+                                    {% if url in [current_url, current_path] %} active{% endif %}" href="{{ url }}" 
                                     {% if title %}title="{{ title }}"{% endif %}>
                                     {{ text|shorten_item_name }}
                                 </a>
