--- a/MoinMoin/themes/basic/templates/layout.html
+++ b/MoinMoin/themes/basic/templates/layout.html
@@ -211,7 +211,7 @@
                             <div class="list-group-item moin-list-heading"> {{ _("Site Navigation") }} </div>
                             {% for cls, url, text, title in navibar_items if cls != 'userlink' %}
                                 <a class="list-group-item {{ cls }}
-                                    {% if url in [current_url, current_path] %} active{% endif %}" href="{{ url }}" 
+                                    {% if url in [current_url, current_path, current_url_showview] %} active{% endif %}" href="{{ url }}" 
                                     {% if title %}title="{{ title }}"{% endif %}>
                                     {{ text|shorten_item_name }}
                                 </a>
