--- a/MoinMoin/themes/basic/templates/snippets.html
+++ b/MoinMoin/themes/basic/templates/snippets.html
@@ -26,7 +26,7 @@
 
 
 {# Text links in the footer #}
-{% macro credits(start='<div class="nav navbar-nav pull-right"> <li>'|safe, end='</li> </div>'|safe, sep='</li> <li>'|safe) %}
+{% macro credits(start='<ul class="nav navbar-nav pull-right"> <li>'|safe, end='</li> </ul>'|safe, sep='</li> <li>'|safe) %}
 {{ start }}
 {{ credit('http://moinmo.in/', 'MoinMoin Powered', 'This site uses the MoinMoin Wiki software.') }}
 {{ sep }}
