--- a/MoinMoin/templates/modify_meta.html
+++ b/MoinMoin/templates/modify_meta.html
@@ -8,6 +8,7 @@
             'contenttype',
             'summary',
             'tags',
+            'acl',
             ] %}
             {{ forms.render(form[e]) }}
         {% endfor %}
