--- a/MoinMoin/templates/layout.html
+++ b/MoinMoin/templates/layout.html
@@ -131,7 +131,7 @@
         </div>
     {% endif %}
 
-    {% set navibar_items = theme_supp.navibar(item_name) %}
+    {% set navibar_items = theme_supp.navibar(fqname) %}
     {% if navibar_items %}
         <ul id="moin-navibar" class="panel">
         {% for cls, url, text, title in navibar_items %}
