--- a/MoinMoin/templates/history.html
+++ b/MoinMoin/templates/history.html
@@ -64,15 +64,15 @@
                     <td class="moin-wordbreak">{{ utils.editor_info(doc) }}</td>
                     <td class="moin-wordbreak">{{ doc.contenttype }}</td>
                     <td class="moin-wordbreak">{{ doc.comment }}</td>
-                    <td><a href="{{ url_for('frontend.show_item', item_name=doc.fqname, rev=doc.revid) }}">{{ _('show') }}</a></td>
-                    <td><a href="{{ url_for('frontend.show_item_meta', item_name=doc.fqname, rev=doc.revid) }}">{{ _('meta') }}</a></td>
-                    <td><a href="{{ url_for('frontend.download_item', item_name=doc.fqname, rev=doc.revid) }}">{{ _('download') }}</a></td>
-                    <td><a href="{{ url_for('frontend.highlight_item', item_name=doc.fqname, rev=doc.revid) }}">{{ _('highlight') }}</a></td>
+                    <td><a href="{{ url_for('frontend.show_item', item_name=fqname, rev=doc.revid) }}">{{ _('show') }}</a></td>
+                    <td><a href="{{ url_for('frontend.show_item_meta', item_name=fqname, rev=doc.revid) }}">{{ _('meta') }}</a></td>
+                    <td><a href="{{ url_for('frontend.download_item', item_name=fqname, rev=doc.revid) }}">{{ _('download') }}</a></td>
+                    <td><a href="{{ url_for('frontend.highlight_item', item_name=fqname, rev=doc.revid) }}">{{ _('highlight') }}</a></td>
                     {% if user.may.write(fqname) -%}
-                        <td><a href="{{ url_for('frontend.revert_item', item_name=doc.fqname, rev=doc.revid) }}">{{ _('revert') }}</a></td>
+                        <td><a href="{{ url_for('frontend.revert_item', item_name=fqname, rev=doc.revid) }}">{{ _('revert') }}</a></td>
                     {%- endif %}
                     {% if user.may.destroy(fqname) -%}
-                        <td><a href="{{ url_for('frontend.destroy_item', item_name=doc.fqname, rev=doc.revid) }}">{{ _('destroy') }}</a></td>
+                        <td><a href="{{ url_for('frontend.destroy_item', item_name=fqname, rev=doc.revid) }}">{{ _('destroy') }}</a></td>
                     {%- endif %}
                 </tr>
                 {% endfor %}
