Fix for #23, header height now does not change.

--- a/MoinMoin/themes/modernized/static/css/stylus/main.styl
+++ b/MoinMoin/themes/modernized/static/css/stylus/main.styl
@@ -1635,7 +1635,7 @@ ul.moin-bcs-item li, ul.moin-bcs-item ul.moin-bcs-subitems li
     list-style-type none
     display block
 
-ul.moin-bcs-item li a, ul.moin-bcs-item li ul.moin-bcs-subitems li a
+ul.moin-bcs-item li ul.moin-bcs-subitems li a
     padding 5px
     display inline-block
 
