--- a/MoinMoin/themes/modernized/static/css/common.css
+++ b/MoinMoin/themes/modernized/static/css/common.css
@@ -533,7 +533,7 @@ table.navigation{float:right;margin:2px}
 }ul.moin-bcs-item ul.moin-bcs-subitems{background-color:#708090}
 ul.moin-bcs-item,ul.moin-bcs-item ul.moin-bcs-subitems{padding:0;margin:0;display:inline-block}
 ul.moin-bcs-item li,ul.moin-bcs-item ul.moin-bcs-subitems li{list-style-type:none;display:block}
-ul.moin-bcs-item li a,ul.moin-bcs-item li ul.moin-bcs-subitems li a{padding:5px;display:inline-block}
+ul.moin-bcs-item li ul.moin-bcs-subitems li a{padding:5px;display:inline-block}
 ul.moin-bcs-item li{position:relative}
 ul.moin-bcs-item li ul.moin-bcs-subitems{display:none;position:absolute}
 ul.moin-bcs-item li:hover ul.moin-bcs-subitems{display:block}
