--- a/MoinMoin/themes/basic/static/css/basic.css
+++ b/MoinMoin/themes/basic/static/css/basic.css
@@ -4310,6 +4310,7 @@ h6:focus .moin-permalink {
   background-color: #f2dede;
   border-color: #eed3d7;
   color: #b94a48;
+  padding-left: 0px;
 }
 .moin-flash-warning > a,
 .moin-flash-error > a,
