--- a/MoinMoin/themes/basic/static/custom-less/basic.less
+++ b/MoinMoin/themes/basic/static/custom-less/basic.less
@@ -62,6 +62,7 @@ h1, h2, h3, h4, h5, h6 {
     list-style-type: none;
   }
   .alert-danger;
+  padding-left: 0px;
 }
 
 .moin-user-action-special {
