--- a/MoinMoin/themes/basic/templates/index.html
+++ b/MoinMoin/themes/basic/templates/index.html
@@ -224,3 +224,8 @@
     <script src="{{ url_for('static', filename='js/jfu.js') }}"></script>
     {{ forms.file_uploader_scripts() }}
 {% endblock %}
+
+{% block head %}
+    {{ super() }}
+    {{ forms.file_uploader_styles() }}
+{% endblock %}
