--- a/MoinMoin/themes/basic/static/custom-less/basic.less
+++ b/MoinMoin/themes/basic/static/custom-less/basic.less
@@ -25,7 +25,8 @@ h1, h2, h3, h4, h5, h6 {
 .moin-logo {
   .text-center;
   position: relative;
-  padding-top: 20px;
+  padding-top: 23px;
+  padding-bottom: 23px;
 }
 
 .moin-list-heading {
