--- a/MoinMoin/themes/basic/templates/delete.html
+++ b/MoinMoin/themes/basic/templates/delete.html
@@ -9,12 +9,11 @@
 	<div class="col-lg-5">
 		{{ gen.form.open(form, method="post", action=url_for('frontend.delete_item', item_name=item.name)) }}
 	  	{{ forms.render_errors(form) }}
-	    
+
 	    <div class="form-group">
-	    	{{ gen.label(form['comment']) }}
-	    	{{ gen.textarea(form['comment'], rows='1', class='form-control') }}
-	    </div>
-	    {{ forms.render_textcha(gen, form) }}
+        	{{ forms.render_textcha(gen, form) }}
+        	{{ gen.input(form['comment'], type="text", class="form-control") }}
+    	</div>
 		
 		<div class="form-group">
 			{{ forms.render_submit(form, class='btn btn-primary') }}
