--- a/MoinMoin/apps/admin/templates/admin/trash.html
+++ b/MoinMoin/apps/admin/templates/admin/trash.html
@@ -27,7 +27,7 @@ Total: {{ results|count }}
                     <td class="moin-wordbreak">{{ result.comment }}</td>
                     <td><a href="{{ url_for('frontend.show_item', item_name=result.fqname) }}">{{ _('show') }}</a></td>
                     {% if user.may.write(result.fqname) -%}
-                    <td><a href="{{ url_for('frontend.show_item', item_name=result.fqname) }}">{{ _('History') }}</a></td>
+                    <td><a href="{{ url_for('frontend.history', item_name=result.fqname) }}">{{ _('History') }}</a></td>
                     <td><a href="{{ url_for('frontend.destroy_item', item_name=result.fqname) }}">{{ _('Destroy') }}</a></td>
                     {%- endif %}
                 </tr>
